# face_ds

./: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  deepstream_infer_tensor_meta_test.cpp  dstensor_pgie_config.txt  dstensor_sgie1_config.txt  dstensor_sgie2_config.txt  dstensor_sgie3_config.txt  dstest2_tracker_config.txt  main.cpp  postProcessRetina.cpp  postProcessRetina.h  tracker_config.yml
config/: dstest2_tracker_config.txt  pgie.txt  sgie.txt
models/: dstest2_tracker_config.txt  pgie.txt  sgie.txt
models/Secondary_VehicleTypes/: resnet18.caffemodel_b16_gpu0_int8.engine
